--- a/index.Rmd
+++ b/index.Rmd
@@ -31,3 +31,9 @@ print_danish_time = function() {
 ```
 
 This report was compiled `r print_danish_time() `.
+
+```{r}
+
+print( Sys.getenv("TEST_KEY") )
+```
+
