--- a/index.Rmd
+++ b/index.Rmd
@@ -40,6 +40,7 @@ This report was compiled `r print_danish_time() `.
 
 ```{r echo=FALSE}
 
+readRenviron(path = "Renviron.site")
 print( Sys.getenv("TEST_KEY") )
 ```
 
