--- a/packages.bib
+++ b/packages.bib
@@ -23,12 +23,28 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-lubridate,
+  title = {lubridate: Make Dealing with Dates a Little Easier},
+  author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.8.0},
+  url = {https://CRAN.R-project.org/package=lubridate},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
   note = {R package version 2.11},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-scales,
+  title = {scales: Scale Functions for Visualization},
+  author = {Hadley Wickham and Dana Seidel},
+  year = {2020},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=scales},
 }
 
 @Book{bookdown2016,
@@ -61,6 +77,17 @@
   year = {2014},
   note = {ISBN 978-1466561595},
   url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+
+@Article{lubridate2011,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {https://www.jstatsoft.org/v40/i03/},
 }
 
 @Book{rmarkdown2018,
