--- a/index.Rmd
+++ b/index.Rmd
@@ -37,3 +37,15 @@ print_danish_time = function() {
 ```
 
 This report was compiled `r print_danish_time() `.
+
+
+```{r}
+print(list.files())
+```
+
+
+```{r}
+readRenviron(path = "Renviron.site")
+print( Sys.getenv() )
+```
+
