--- a/1_Fed_Yield_Curve.Rmd
+++ b/1_Fed_Yield_Curve.Rmd
@@ -24,14 +24,18 @@ source(file = "money_theme.R")
 readRenviron(path = "Renviron.site")
 ```
 
+```{r}
+print( Sys.getenv() )
+```
 
-```{r }
+
+```{r eval=F }
 fredr::fredr_set_key(key = Sys.getenv("FRED_API"))
 ```
 
 # Get Data
 
-```{r}
+```{r eval=F }
 df_yieldcurve = 
   fredr(series_id = "DGS1") %>% 
   bind_rows(fredr(series_id = "DGS2")) %>% 
@@ -83,7 +87,7 @@ df_yieldcurve =
 
 ## Time Series
 
-```{r}
+```{r eval=F}
 df_yieldcurve %>% 
   dplyr::mutate(value=value/100) %>% 
   ggplot(.,aes(x=date,y=value)) +
@@ -98,7 +102,7 @@ df_yieldcurve %>%
 ```
 
 
-```{r}
+```{r eval=F}
 
 df_yieldcurve %>% 
   filter(date>=Sys.Date()-years(1)) %>% 
@@ -118,7 +122,7 @@ df_yieldcurve %>%
 
 ## Spreads
 
-```{r}
+```{r eval=F}
 
 df_yieldcurve %>% 
   filter(series_id %in% c("MORTGAGE30US","DGS30")) %>% 
@@ -138,7 +142,7 @@ df_yieldcurve %>%
 ```
 
 ## DGS2-DGS10 Spread
-```{r}
+```{r eval=F}
 
 df_yieldcurve %>% 
   dplyr::select(-time) %>% 
@@ -159,7 +163,7 @@ df_yieldcurve %>%
 
 ## DGS6MO-MORTGAGE30 Spread
 
-```{r}
+```{r eval=F}
 
 df_yieldcurve %>% 
   dplyr::select(-time) %>% 
@@ -182,7 +186,7 @@ df_yieldcurve %>%
 
 ## Yield Curve
 
-```{r}
+```{r eval=F}
 
 df_yieldcurve %>% 
   dplyr::mutate(series_id=as.integer(paste0(recode(series_id,
@@ -226,8 +230,7 @@ df_yieldcurve %>%
 
 # Yield Checkboard
 
-```{r}
-
+```{r eval=F}
 df_checkboard = expand.grid(series_id=unique(df_yieldcurve$series_id),
                             joined_series=unique(df_yieldcurve$series_id))
 
@@ -270,7 +273,7 @@ df_yield_checkboard %>%
 ```
 
 
-```{r}
+```{r eval=F}
 
 df_yield_checkboard %>% 
   dplyr::mutate(series_id=as.integer(paste0(recode(series_id,
