--- a/index.Rmd
+++ b/index.Rmd
@@ -37,3 +37,11 @@ print_danish_time = function() {
 ```
 
 This report was compiled `r print_danish_time() `.
+
+```{r }
+readRenviron(path = "Renviron.site")
+```
+
+```{r}
+print( Sys.getenv() )
+```
