--- a/1_Fed_Yield_Curve.Rmd
+++ b/1_Fed_Yield_Curve.Rmd
@@ -22,6 +22,7 @@ source(file = "money_theme.R")
 
 
 ```{r }
+readRenviron(path = "Renviron.site")
 fredr::fredr_set_key(key = Sys.getenv("FRED_API"))
 ```
 
