--- a/1_Fed_Yield_Curve.Rmd
+++ b/1_Fed_Yield_Curve.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```{r}
 
+if (!require(pacman)) { install.packages(pacman) }
 library(pacman)
 pacman::p_load(fredr,dplyr,tidyr,lubridate,caret,partykit,pROC,gganimate,devtools)
 install.packages('transformr')
