--- a/2_Obligationsrenter.Rmd
+++ b/2_Obligationsrenter.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 
-if (!require(pacman)) { install.packages(pacman) }
+if (!require(pacman)) { install.packages("pacman") }
 library(pacman)
 pacman::p_load(openxlsx,dplyr,tidyr,ggplot2,lubridate,rvest,zoo,PlayerRatings)
 source(file = "money_theme.R")
