--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,7 @@ description: "Since 1971, Money Printer Has Gone BRRR. Let's Make the Most of It
 ```{r include=FALSE}
 
 if (!require(pacman)) { install.packages("pacman") }
-pacman::p_load( lubridate , scales )
+pacman::p_load( lubridate , scales , fredr )
 
 # automatically create a bib database for R packages
 knitr::write_bib(c(
