--- a/3_Predict_US_Interest_Rates.Rmd
+++ b/3_Predict_US_Interest_Rates.Rmd
@@ -432,13 +432,15 @@ df_predict_DFF %>%
 ```{r}
 
 
-fomc_dates = c(ymd("2022-05-04"),
+fomc_dates = data.frame(date_fomc=c(ymd("2022-05-04"),
                ymd("2022-06-15"),
                ymd("2022-07-27"),
                ymd("2022-09-21"),
                ymd("2022-11-02"),
                ymd("2022-12-14"),
-               ymd("2023-02-01"))
+               ymd("2023-02-01")))
+
+
 df_predict_DFF %>% 
   dplyr::mutate(pred_DFF=predict(fit_DFF,.),
                 pred_DGS2=predict(fit_DGS2,.),
@@ -448,18 +450,21 @@ df_predict_DFF %>%
   dplyr::select(date,pred_DFF:pred_MORTGAGE30US) %>% 
   dplyr::mutate(date=date+years(1)) %>%
   gather(pred,val,pred_DFF:pred_MORTGAGE30US) %>%
-  crossing(one_year=c(TRUE,FALSE)) %>% 
-  dplyr::mutate(date=ifelse(one_year,
-                            ifelse(date>=Sys.Date()-years(1),date,NA),date)) %>% 
   filter(!is.na(date)) %>% 
-  dplyr::mutate(date=as.Date(date,origin="1970-01-01")) %>%
-  ggplot(.,aes(x=date,y=val,color=pred)) +
+  dplyr::mutate(date=as.Date(date,origin="1970-01-01")) %>% 
+  crossing(fomc_dates) %>% 
+  group_by( date_fomc ) %>% 
+  filter(date-date_fomc>=0) %>% 
+  filter(date-date_fomc==min(date-date_fomc)) %>% 
+  filter(pred=="pred_DFF") %>% 
+  dplyr::mutate(val=ceiling(val/0.25)*0.25/100) %>% 
+  ggplot(.,aes(x=date_fomc,y=val)) +
+  geom_point() + 
   geom_line() +
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-  theme(axis.text.x=element_text(angle=45,hjust=1)) +
-  geom_vline(xintercept = Sys.Date(),linetype=2) +
-  geom_hline(yintercept = 0,linetype=2) +
-  facet_wrap(~one_year,scales="free",ncol=1)
+  scale_y_continuous(breaks = seq(0,0.1,by=0.0025),labels = scales::percent,limits = c(0,NA)) +
+  scale_x_date(date_breaks = "1 month",date_labels = "%b") +
+  geom_vline(data=fomc_dates,aes(xintercept=date_fomc),linetype=2)
+
                 
 ```
 
