--- a/6_House_Prices_RKR.Rmd
+++ b/6_House_Prices_RKR.Rmd
@@ -15,6 +15,7 @@ options(scipen=999)
 ```{r }
 library(pacman)
 pacman::p_load(tidyr,dplyr,ggplot2,boot,openxlsx,lubridate,forcats,broom,purrr,caret,glue,devtools,dkstat,httr,rvest)
+source(file = "money_theme.R")
 ```
 
 ```{r}
