--- a/1_Fed_Yield_Curve.Rmd
+++ b/1_Fed_Yield_Curve.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r  include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 ```
 
 # Yield Curve
