--- a/4_Byggekonjunktur.Rmd
+++ b/4_Byggekonjunktur.Rmd
@@ -6,10 +6,11 @@ output: html_document
 ---
 
 ```{r include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 options(scipen=999)
 library(pacman)
 pacman::p_load(devtools,zoo,dplyr,tidyr,ggplot2,lubridate,dkstat,TTR)
+source(file = "money_theme.R")
 ```
 
 # Danmarks Statistik
