--- a/1_Fed_Yield_Curve.Rmd
+++ b/1_Fed_Yield_Curve.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 ```
 
-# Yield Curve
+# FED
 
 ```{r}
 
@@ -26,8 +26,6 @@ readRenviron(path = "Renviron.site")
 fredr::fredr_set_key(key = Sys.getenv("FRED_API"))
 
 ```
-
-# Get Data
 
 ```{r }
 df_yieldcurve = 
@@ -79,7 +77,7 @@ df_yieldcurve =
                                           365*as.integer(substr(series_id,4,5)))))) 
 ```
 
-## Time Series
+## Treasury Bonds
 
 ```{r }
 df_yieldcurve %>% 
@@ -95,6 +93,7 @@ df_yieldcurve %>%
        caption = timestamp_caption())
 ```
 
+### Previous 12 Months
 
 ```{r }
 
@@ -104,7 +103,7 @@ df_yieldcurve %>%
   ggplot(.,aes(x=date,y=value)) +
   geom_line(aes(group=series_id,color=series_id)) +
   theme(legend.position="bottom") +
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_x_date(date_breaks = "1 months",date_labels = "%Y %b") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
   theme_money_printer_go_brrr +
   labs(title="All Yields (Last Year)",
@@ -113,69 +112,6 @@ df_yieldcurve %>%
        caption = timestamp_caption())
 
 ```
-
-## Spreads
-
-```{r }
-
-df_yieldcurve %>% 
-  filter(series_id %in% c("MORTGAGE30US","DGS30")) %>% 
-  spread(series_id,value) %>% 
-  dplyr::mutate(spread=(MORTGAGE30US-DGS30)/100) %>% 
-  ggplot(.,aes(x=date,y=spread)) +
-  geom_line() +
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) +
-  geom_hline(yintercept = 0,linetype=2) +
-  theme_money_printer_go_brrr +
-  theme(legend.position="bottom") +
-  labs(title="Spread: Mortgage30US - DGS30",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
-
-## DGS2-DGS10 Spread
-```{r }
-
-df_yieldcurve %>% 
-  dplyr::select(-time) %>% 
-  filter(series_id %in% c("DGS10","DGS2")) %>% 
-  spread(series_id,value) %>% 
-  dplyr::mutate(spread=(DGS10-DGS2)/100) %>% 
-  ggplot(.,aes(x=date,y=spread)) +
-  geom_line() +
-  geom_hline(yintercept = 0,linetype=2) + 
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) + 
-  theme_money_printer_go_brrr +
-  labs(title="Spread: DGS2 - DGS10",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
-
-## DGS6MO-MORTGAGE30 Spread
-
-```{r }
-
-df_yieldcurve %>% 
-  dplyr::select(-time) %>% 
-  filter(series_id %in% c("MORTGAGE30US","DGS6MO")) %>% 
-  spread(series_id,value) %>% 
-  dplyr::mutate(spread=(MORTGAGE30US-DGS6MO)/100) %>% 
-  ggplot(.,aes(x=date,y=spread)) +
-  geom_line() +
-  geom_hline(yintercept = 0,linetype=2) + 
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
-  theme_money_printer_go_brrr +
-  labs(title="Spread: MORTGAGE30US - DGS6MO",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
-
 
 
 ## Yield Curve
@@ -207,22 +143,72 @@ df_yieldcurve %>%
 
 ```
 
+## Treasury Bonds Spreads
+
+### 30-Year Mortgage to 30-Year T-Bond
+
 ```{r }
 
 df_yieldcurve %>% 
-  filter(date>(Sys.Date()-days(30))) %>%
-  ggplot(.,aes(x=time,y=value)) +
-  geom_point() +
+  filter(series_id %in% c("MORTGAGE30US","DGS30")) %>% 
+  spread(series_id,value) %>% 
+  dplyr::mutate(spread=(MORTGAGE30US-DGS30)/100) %>% 
+  ggplot(.,aes(x=date,y=spread)) +
   geom_line() +
-  scale_x_continuous(labels = df_yieldcurve$series_id,breaks = df_yieldcurve$time) +
-  scale_y_continuous(limits=c(0,10)) +
-  transition_time(date) +
-  labs(title="Yield Curve",
-       subtitle="{frame_time}")
-
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) +
+  geom_hline(yintercept = 0,linetype=2) +
+  theme_money_printer_go_brrr +
+  theme(legend.position="bottom") +
+  labs(title="Spread: Mortgage30US - DGS30",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption())
 ```
 
-# Yield Checkboard
+### 2-Year to 10-Year T-Bond
+
+```{r }
+
+df_yieldcurve %>% 
+  dplyr::select(-time) %>% 
+  filter(series_id %in% c("DGS10","DGS2")) %>% 
+  spread(series_id,value) %>% 
+  dplyr::mutate(spread=(DGS10-DGS2)/100) %>% 
+  ggplot(.,aes(x=date,y=spread)) +
+  geom_line() +
+  geom_hline(yintercept = 0,linetype=2) + 
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) + 
+  theme_money_printer_go_brrr +
+  labs(title="Spread: DGS2 - DGS10",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption())
+```
+
+### 6-Month to 30-Year Mortgage Spread
+
+```{r }
+
+df_yieldcurve %>% 
+  dplyr::select(-time) %>% 
+  filter(series_id %in% c("MORTGAGE30US","DGS6MO")) %>% 
+  spread(series_id,value) %>% 
+  dplyr::mutate(spread=(MORTGAGE30US-DGS6MO)/100) %>% 
+  ggplot(.,aes(x=date,y=spread)) +
+  geom_line() +
+  geom_hline(yintercept = 0,linetype=2) + 
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
+  theme_money_printer_go_brrr +
+  labs(title="Spread: MORTGAGE30US - DGS6MO",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption())
+```
+
+## Yield Checkboard
 
 ```{r }
 df_checkboard = expand.grid(series_id=unique(df_yieldcurve$series_id),
