--- a/9_ECB.Rmd
+++ b/9_ECB.Rmd
@@ -148,8 +148,8 @@ df_ECB_yields %>%
   theme_money_printer_go_brrr +
   labs(title="Spread: 2Y - 10Y",
        x="Date",
-       y="Spread (%)" #,
-       # caption = timestamp_caption()
+       y="Spread (%)",
+       caption = timestamp_caption()
        )
 ```
 
@@ -216,4 +216,43 @@ df_predict_DF %>%
   facet_wrap(~one_year,scales="free",ncol=1)
 ```
 
+## ECB to Danish Yields
+
+```{r}
+
+df_DK10Y = ecb::get_data(key = "IRS.M.DK.L.L40.CI.0000.DKK.N.Z")  %>% 
+  dplyr::mutate(obstime=ymd(paste0(obstime,"-01")),
+                Yield="10Y",
+                dk_obsvalue=obsvalue/100) %>% 
+    dplyr::select(Yield,obstime,dk_obsvalue)
+
+df_DK3MO = ecb::get_data(key = "FM.M.DK.DKK.DS.MM.CIBOR3M.ASKA")  %>% 
+  dplyr::mutate(obstime=ymd(paste0(obstime,"-01")),
+                Yield="3M",
+                dk_obsvalue=obsvalue/100) %>% 
+    dplyr::select(Yield,obstime,dk_obsvalue)
+
+df_ECB_DK = 
+  df_ECB_yields %>% 
+  filter(Yield %in% c("3M","10Y")) %>% 
+  inner_join( bind_rows(df_DK10Y,df_DK3MO) ) %>% 
+  dplyr::mutate(spread=dk_obsvalue-obsvalue)
+
+
+df_ECB_DK %>% 
+  ggplot(.,aes(x=obstime,y=spread,color=Yield)) +
+  geom_line() +
+  facet_wrap(~Yield) +
+  scale_y_continuous(labels = scales::percent) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  geom_hline(yintercept = 0,linetype=2) +
+  theme_money_printer_go_brrr  +
+  labs(title="Spread: DK Interbank 3MO - EU 3 Month Bond",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption()
+       )
+
+
+```
 
